@@ -24,6 +24,7 @@ aTunes 2.1.0
 - Fetch covers while reading repository and show in progress dialog
 - User can change color of tray player icons
 - Repository saved immediately after a change
+- Play lists saved immediately after a change
 - Option to refresh only one folder from folders view
 - Edit radio name, url and label
 - Include file name and path in filter [3146992]
